[gd_scene load_steps=7 format=3 uid="uid://gqscqem2aa2q"]

[ext_resource type="Script" uid="uid://c2n155gm350tg" path="res://cards/site_card.gd" id="1_f2w7u"]
[ext_resource type="Texture2D" uid="uid://bdpteya7dtpmh" path="res://assets/ComfyUI_00027_.png" id="2_57nfb"]
[ext_resource type="Script" uid="uid://cudckam7n2t8o" path="res://cards/get_in_button.gd" id="3_h8wnb"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cjh4l"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3iv51"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bohu8"]
bg_color = Color(0.13, 0.13, 0.13, 0.764706)

[node name="siteCard" type="Control" groups=["card"]]
custom_minimum_size = Vector2(240, 340)
layout_mode = 3
anchors_preset = 0
offset_right = 240.0
offset_bottom = 240.0
mouse_filter = 1
script = ExtResource("1_f2w7u")

[node name="TextureRect" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -110.0
offset_top = -158.5
offset_right = 110.0
offset_bottom = 158.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect"]
custom_minimum_size = Vector2(206, 295)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -103.0
offset_top = -151.0
offset_right = 103.0
offset_bottom = 149.0
grow_horizontal = 2
grow_vertical = 2

[node name="siteImg" type="TextureRect" parent="TextureRect/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("2_57nfb")
expand_mode = 4
stretch_mode = 6

[node name="siteName" type="Label" parent="TextureRect/VBoxContainer"]
layout_mode = 2
mouse_filter = 1
text = "场地名字"
horizontal_alignment = 1

[node name="getInButton" type="Button" parent="."]
layout_mode = 2
offset_left = 12.0
offset_top = 13.0
offset_right = 229.0
offset_bottom = 328.0
mouse_filter = 1
mouse_force_pass_scroll_events = false
mouse_default_cursor_shape = 2
theme_override_styles/pressed = SubResource("StyleBoxFlat_cjh4l")
theme_override_styles/normal = SubResource("StyleBoxFlat_3iv51")
script = ExtResource("3_h8wnb")

[node name="Panel" type="Panel" parent="getInButton"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 7.0
offset_right = -6.0
offset_bottom = -36.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_bohu8")

[node name="Label" type="Label" parent="getInButton/Panel"]
layout_mode = 0
offset_left = 7.0
offset_top = 6.0
offset_right = 193.0
offset_bottom = 259.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 16
text = "关于这个地方的介绍"
autowrap_mode = 1

[connection signal="gui_input" from="." to="." method="_on_mouse_button_up"]
[connection signal="button_down" from="getInButton" to="." method="_on_get_in_button_button_down"]
[connection signal="mouse_entered" from="getInButton" to="getInButton" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="getInButton" to="getInButton" method="_on_mouse_exited"]
